fix article title

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             </div>
             <div class="col-10-xs col-6-md center">
                 <h2 class="center">TEXT</h2>
-                <ul class="center">
-                    <li class="link">
+                <ul class="center links">
+                    <li>
                         <a href="https://medium.com/fiverr-engineering/creating-apis-for-the-human-developer-c0f51a6d9366" target="_blank" rel="noopener noreferrer">Creating APIs for the human developer</a>
                     </li>
-                    <li class="link">
+                    <li>
                         <a href="https://medium.com/fiverr-engineering/writing-a-js-proxy-based-assertion-function-5a7359df9f9b" target="_blank" rel="noopener noreferrer">Writing a JS Proxy based assertion function</a>
                     </li>
-                    <li class="link">
-                        <a href="https://medium.com/fiverr-engineering/creating-apis-for-the-human-developer-c0f51a6d9366" target="_blank" rel="noopener noreferrer">Creating APIs for the human developer</a>
+                    <li>
+                        <a href="https://medium.com/fiverr-engineering/introducing-passable-45250548afd1" target="_blank" rel="noopener noreferrer">Introducing Passable</a>
                     </li>
                 </ul>
             </div>
