add repos seperator

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="grid col-12-xs col-10-md">
             <div class="col-10-xs col-6-md center">
                 <h2 class="center">CODE</h2>
-                <ul id="repos" class="center"></ul>
+                <ul id="repos" class="center links"></ul>
             </div>
             <div class="col-10-xs col-6-md center">
                 <h2 class="center">TEXT</h2>
