--- a/index.html
+++ b/index.html
@@ -23,21 +23,32 @@
                 <ul id="repos" class="center links"></ul>
             </div>
             <div class="col-10-xs col-6-md center">
-                <h2 class="center">TEXT</h2>
-                <ul class="center links">
-                    <li>
-                        <a href="https://medium.com/fiverr-engineering/creating-apis-for-the-human-developer-c0f51a6d9366" target="_blank" rel="noopener noreferrer">Creating APIs for the human developer</a>
-                    </li>
-                    <li>
-                        <a href="https://medium.com/fiverr-engineering/writing-a-js-proxy-based-assertion-function-5a7359df9f9b" target="_blank" rel="noopener noreferrer">Writing a JS Proxy based assertion function</a>
-                    </li>
-                    <li>
-                        <a href="https://medium.com/fiverr-engineering/introducing-passable-45250548afd1" target="_blank" rel="noopener noreferrer">Introducing Passable</a>
-                    </li>
-                </ul>
+                <div class="col-12-xs center">
+                    <h2 class="center">TEXT</h2>
+                    <ul class="center links">
+                        <li>
+                            <a href="https://medium.com/fiverr-engineering/creating-apis-for-the-human-developer-c0f51a6d9366" target="_blank" rel="noopener noreferrer">Creating APIs for the human developer</a>
+                        </li>
+                        <li>
+                            <a href="https://medium.com/fiverr-engineering/writing-a-js-proxy-based-assertion-function-5a7359df9f9b" target="_blank" rel="noopener noreferrer">Writing a JS Proxy based assertion function</a>
+                        </li>
+                        <li>
+                            <a href="https://medium.com/fiverr-engineering/introducing-passable-45250548afd1" target="_blank" rel="noopener noreferrer">Introducing Passable</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12-xs center">
+                    <h2 class="center">VIDEO</h2>
+                    <ul class="center links">
+                        <li>
+                            <a href="https://www.youtube.com/watch?v=_R5WfSXBruk" target="_blank" rel="noopener noreferrer">Rethinking form validations</a> <small>(Hebrew)</small>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
     </div>
+    <script src="https://cdn.jsdelivr.net/gh/ealush/vent/lib/vent.min.es5.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
