--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Lead front end platform developer at fiverr.com</p>
             <span>code<span class="paint">@</span>ealush.com</span>
         </section>
-        <section class="grid col-12-xs col-10-md">
+        <section class="grid col-12-xs col-10-md content">
             <div class="col-10-xs col-6-md center">
                 <h2 class="center">CODE</h2>
                 <ul id="repos" class="center links"></ul>
