--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section id="main" class="main center">
             <div class="face center"></div>
             <h1>HI<span class="paint">,</span> I AM<br>EVYATAR<span class="paint">.</span></h1>
-            <p>Lead front end platform developer at fiverr.com</p>
+            <p>Frontend Engineer at Facebook.</p>
             <span>code<span class="paint">@</span>ealush.com</span>
         </section>
         <section class="grid col-12-xs col-10-md content">
@@ -26,6 +26,9 @@
                 <div class="col-12-xs center">
                     <h2 class="center">TEXT</h2>
                     <ul class="center links">
+                        <li>
+                            <a href="https://dev.to/ealush/fight-validations-spaghetti-with-vest-3i8j" target="_blank" rel="noopener noreferrer">Fight Validations Spaghetti with Vest.</a>
+                        </li>
                         <li>
                             <a href="https://medium.com/fiverr-engineering/creating-apis-for-the-human-developer-c0f51a6d9366" target="_blank" rel="noopener noreferrer">Creating APIs for the human developer</a>
                         </li>
