--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <h2 class="center">TEXT</h2>
                     <ul class="center links">
                         <li>
+                            <a href="https://dev.to/ealush/dead-simple-form-validation-with-vest-5gf8" target="_blank" rel="noopener noreferrer">Dead Simple React Validations with Vest.</a>
+                        </li>
+                        <li>
                             <a href="https://dev.to/ealush/fight-validations-spaghetti-with-vest-3i8j" target="_blank" rel="noopener noreferrer">Fight Validations Spaghetti with Vest.</a>
                         </li>
                         <li>
