--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
           <h2 class="center">VIDEO</h2>
           <ul class="center links">
             <li>
+              <a href="https://www.youtube.com/watch?v=mL9ocOBg2y4" target="_blank" rel="noopener noreferrer">Form Validations with VEST </a> <small>(Conf42)</small>
+            </li>
+            <li>
               <a href="https://twitter.com/AlushEvyatar/status/1281297006070284289" target="_blank"
                 rel="noopener noreferrer">Vest Demo</a>
             </li>
             <li>
               <a href="https://www.youtube.com/watch?v=_R5WfSXBruk" target="_blank" rel="noopener noreferrer">Rethinking
-                form validations</a> <small>(Hebrew)</small>
+                form validations</a> <small>(Reversim | Hebrew)</small>
             </li>
           </ul>
         </div>
