--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <h2 class="center">VIDEO</h2>
           <ul class="center links">
             <li>
+              <a href="https://www.youtube.com/watch?v=mL9ocOBg2y4" target="_blank" rel="noopener noreferrer">It can't be that easy | Form validation with Vest</a> <small>(Conf42)</small>
+            </li>
+            <li>
               <a href="https://twitter.com/AlushEvyatar/status/1281297006070284289" target="_blank"
                 rel="noopener noreferrer">Vest Demo</a>
             </li>
