For the sake of my sanity, just ignore this...

--- a/index.html
+++ b/index.html
@@ -16,62 +16,77 @@
     <section id="main" class="main center">
       <div class="face center"></div>
       <h1>HI<span class="paint">,</span> I AM<br>EVYATAR<span class="paint">.</span></h1>
-      <p>Frontend Engineer at Facebook.</p>
+      <p>Front End Engineer at Facebook.</p>
       <span>code<span class="paint">@</span>ealush.com</span>
     </section>
     <section class="grid col-12-xs col-10-md content">
       <div class="col-10-xs col-6-md center">
-        <h2 class="center">CODE</h2>
-        <ul id="repos" class="center links"><li><a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 1462)</a></li><li><a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 283)</a></li><li><a href="https://github.com/ealush/context" target="_blank" rel="noopener noreferrer">context(🌟 3)</a></li><li><a href="https://github.com/ealush/n4s" target="_blank" rel="noopener noreferrer">n4s(🌟 36)</a></li><li><a href="https://github.com/ealush/butter-toast" target="_blank" rel="noopener noreferrer">butter-toast(🌟 109)</a></li><li><a href="https://github.com/ealush/wait" target="_blank" rel="noopener noreferrer">wait(🌟 1)</a></li><li><a href="https://github.com/ealush/vent" target="_blank" rel="noopener noreferrer">vent(🌟 29)</a></li><li><a href="https://github.com/ealush/vast" target="_blank" rel="noopener noreferrer">vast(🌟 2)</a></li><li><a href="https://github.com/ealush/linear-debounce" target="_blank" rel="noopener noreferrer">linear-debounce(🌟 2)</a></li><li><a href="https://github.com/ealush/supress" target="_blank" rel="noopener noreferrer">supress(🌟 1)</a></li><li><a href="https://github.com/ealush/tag-ls" target="_blank" rel="noopener noreferrer">tag-ls(🌟 1)</a></li><li><a href="https://github.com/ealush/inkbox" target="_blank" rel="noopener noreferrer">inkbox(🌟 7)</a></li><li><a href="https://github.com/ealush/emoji-picker-textfields-component" target="_blank" rel="noopener noreferrer">emoji-picker-textfields-component(🌟 24)</a></li><li><a href="https://github.com/ealush/passable-react" target="_blank" rel="noopener noreferrer">passable-react(🌟 4)</a></li><li><a href="https://github.com/ealush/cinnamon-sugar" target="_blank" rel="noopener noreferrer">cinnamon-sugar(🌟 5)</a></li><li><a href="https://github.com/ealush/react-format-props" target="_blank" rel="noopener noreferrer">react-format-props(🌟 3)</a></li></ul>
-      </div>
-      <div class="col-10-xs col-6-md center">
-        <div class="col-12-xs center">
-          <h2 class="center">TEXT</h2>
-          <ul class="center links">
+            <h2 class="center">Code</h2>
+            <ul class="center links">
             <li>
-              <a href="https://dev.to/ealush/dead-simple-form-validation-with-vest-5gf8" target="_blank"
-                rel="noopener noreferrer">Dead Simple React Validations with Vest.</a>
-            </li>
+                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 1462)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 283)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/context" target="_blank" rel="noopener noreferrer">context(🌟 3)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/n4s" target="_blank" rel="noopener noreferrer">n4s(🌟 36)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/butter-toast" target="_blank" rel="noopener noreferrer">butter-toast(🌟 109)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/wait" target="_blank" rel="noopener noreferrer">wait(🌟 1)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/vent" target="_blank" rel="noopener noreferrer">vent(🌟 29)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/vast" target="_blank" rel="noopener noreferrer">vast(🌟 2)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/linear-debounce" target="_blank" rel="noopener noreferrer">linear-debounce(🌟 2)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/supress" target="_blank" rel="noopener noreferrer">supress(🌟 1)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/tag-ls" target="_blank" rel="noopener noreferrer">tag-ls(🌟 1)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/inkbox" target="_blank" rel="noopener noreferrer">inkbox(🌟 7)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/emoji-picker-textfields-component" target="_blank" rel="noopener noreferrer">emoji-picker-textfields-component(🌟 24)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/passable-react" target="_blank" rel="noopener noreferrer">passable-react(🌟 4)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/cinnamon-sugar" target="_blank" rel="noopener noreferrer">cinnamon-sugar(🌟 5)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/react-format-props" target="_blank" rel="noopener noreferrer">react-format-props(🌟 3)</a> 
+              </li></ul></div><div class="col-10-xs col-6-md center">
+            <h2 class="center">Articles</h2>
+            <ul class="center links">
             <li>
-              <a href="https://dev.to/ealush/fight-validations-spaghetti-with-vest-3i8j" target="_blank"
-                rel="noopener noreferrer">Fight Validations Spaghetti with Vest.</a>
-            </li>
+                  <a href="https://dev.to/ealush/dead-simple-form-validation-with-vest-5gf8" target="_blank" rel="noopener noreferrer">Dead Simple React Validations with Vest.</a> 
+              </li><li>
+                  <a href="https://dev.to/ealush/fight-validations-spaghetti-with-vest-3i8j" target="_blank" rel="noopener noreferrer">Fight Validations Spaghetti with Vest.</a> 
+              </li><li>
+                  <a href="https://medium.com/fiverr-engineering/creating-apis-for-the-human-developer-c0f51a6d9366" target="_blank" rel="noopener noreferrer">Creating APIs for the human developer</a> 
+              </li><li>
+                  <a href="https://medium.com/fiverr-engineering/writing-a-js-proxy-based-assertion-function-5a7359df9f9b" target="_blank" rel="noopener noreferrer">Writing a JS Proxy based assertion function</a> 
+              </li><li>
+                  <a href="https://medium.com/fiverr-engineering/introducing-passable-45250548afd1" target="_blank" rel="noopener noreferrer">Introducing Passable</a> 
+              </li></ul></div><div class="col-10-xs col-6-md center">
+            <h2 class="center">Videos</h2>
+            <ul class="center links">
             <li>
-              <a href="https://medium.com/fiverr-engineering/creating-apis-for-the-human-developer-c0f51a6d9366"
-                target="_blank" rel="noopener noreferrer">Creating APIs for the human developer</a>
-            </li>
+                  <a href="https://www.youtube.com/watch?v=2D0LmCtVTSk" target="_blank" rel="noopener noreferrer">What you need to know about contributing to open source</a> <small>(Hebrew)</small>
+              </li><li>
+                  <a href="https://www.youtube.com/watch?v=mL9ocOBg2y4" target="_blank" rel="noopener noreferrer">It can't be that easy! Form validations with Vest</a> <small>(Conf42)</small>
+              </li><li>
+                  <a href="https://twitter.com/AlushEvyatar/status/1281297006070284289" target="_blank" rel="noopener noreferrer">Vest Demo</a> 
+              </li><li>
+                  <a href="https://www.youtube.com/watch?v=_R5WfSXBruk" target="_blank" rel="noopener noreferrer">Rethinking form validations</a> <small>(Hebrew)</small>
+              </li></ul></div><div class="col-10-xs col-6-md center">
+            <h2 class="center">Interviews</h2>
+            <ul class="center links">
             <li>
-              <a href="https://medium.com/fiverr-engineering/writing-a-js-proxy-based-assertion-function-5a7359df9f9b"
-                target="_blank" rel="noopener noreferrer">Writing a JS Proxy based assertion function</a>
-            </li>
-            <li>
-              <a href="https://medium.com/fiverr-engineering/introducing-passable-45250548afd1" target="_blank"
-                rel="noopener noreferrer">Introducing Passable</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-12-xs center">
-          <h2 class="center">VIDEO</h2>
-          <ul class="center links">
-            <li>
-              <a href="https://www.youtube.com/watch?v=2D0LmCtVTSk" target="_blank" rel="noopener noreferrer">What you need to know about contributing to open source</a> <small>(Hebrew)</small>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/watch?v=mL9ocOBg2y4" target="_blank"
-                rel="noopener noreferrer">It can't be that easy! Form validations with Vest</a>
-            </li>
-            <li>
-              <a href="https://twitter.com/AlushEvyatar/status/1281297006070284289" target="_blank"
-                rel="noopener noreferrer">Vest Demo</a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/watch?v=_R5WfSXBruk" target="_blank" rel="noopener noreferrer">Rethinking
-                form validations</a> <small>(Hebrew)</small>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
+                  <a href="https://anchor.fm/frontend-greatness/episodes/DX-is-UX-With-Evyatar-e12tco9" target="_blank" rel="noopener noreferrer">DX is UX</a> <small>Frontend Greatness Podcast</small>
+              </li><li>
+                  <a href="https://reactroundup.com/172" target="_blank" rel="noopener noreferrer">Form Validations and Open Source</a> <small>React Roundup Podcast</small>
+              </li></ul></div></section>
   </div>
   <script src="https://cdn.jsdelivr.net/gh/ealush/vent/lib/vent.min.es5.js"></script>
   <script src="./index.js"></script>
