--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
             <h2 class="center">Videos</h2>
             <ul class="center links">
             <li>
+                  <a href="https://portal.gitnation.org/contents/vue-form-validations-with-vest" target="_blank" rel="noopener noreferrer">Vue Form Validations with Vest</a> <small>Vue.js London</small>
+              </li><li>
                   <a href="https://www.youtube.com/watch?v=2D0LmCtVTSk" target="_blank" rel="noopener noreferrer">What you need to know about contributing to open source</a> <small>(Hebrew)</small>
               </li><li>
                   <a href="https://www.youtube.com/watch?v=mL9ocOBg2y4" target="_blank" rel="noopener noreferrer">It can't be that easy! Form validations with Vest</a> <small>(Conf42)</small>
