This commit is a lie

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <h2 class="center">Code</h2>
             <ul class="center links">
             <li>
+                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 298)</a> 
+              </li><li>
                   <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 1558)</a> 
               </li><li>
                   <a href="https://github.com/ealush/wait" target="_blank" rel="noopener noreferrer">wait(🌟 2)</a> 
-              </li><li>
-                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 297)</a> 
               </li><li>
                   <a href="https://github.com/ealush/context" target="_blank" rel="noopener noreferrer">context(🌟 3)</a> 
               </li><li>
@@ -72,6 +72,8 @@
             <h2 class="center">Videos</h2>
             <ul class="center links">
             <li>
+                  <a href="https://www.youtube.com/watch?v=X2PuiawaGV4" target="_blank" rel="noopener noreferrer">Up Your Form Validation Game with Vest</a> <small>Svelte Summit | Fall 2021</small>
+              </li><li>
                   <a href="https://portal.gitnation.org/contents/vue-form-validations-with-vest" target="_blank" rel="noopener noreferrer">Vue Form Validations with Vest</a> <small>Vue.js London</small>
               </li><li>
                   <a href="https://www.youtube.com/watch?v=2D0LmCtVTSk" target="_blank" rel="noopener noreferrer">What you need to know about contributing to open source</a> <small>(Hebrew)</small>
