pgsql is being a pain

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2 class="center">Code</h2>
             <ul class="center links">
             <li>
-                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 1754)</a> 
+                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 1762)</a> 
               </li><li>
                   <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 324)</a> 
               </li><li>
@@ -87,6 +87,10 @@
             <h2 class="center">Interviews</h2>
             <ul class="center links">
             <li>
+                  <a href="https://changelog.com/jsparty/213" target="_blank" rel="noopener noreferrer">Playing it close to the Vest</a> <small>JS Party</small>
+              </li><li>
+                  <a href="https://podrocket.logrocket.com/vest" target="_blank" rel="noopener noreferrer">Vest with Evyatar Alush</a> <small>PodRocket by LogRocket</small>
+              </li><li>
                   <a href="https://anchor.fm/frontend-greatness/episodes/DX-is-UX-With-Evyatar-e12tco9" target="_blank" rel="noopener noreferrer">DX is UX</a> <small>Frontend Greatness Podcast</small>
               </li><li>
                   <a href="https://reactroundup.com/172" target="_blank" rel="noopener noreferrer">Form Validations and Open Source</a> <small>React Roundup Podcast</small>
