For great justice.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <li>
                   <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 1786)</a> 
               </li><li>
+                  <a href="https://github.com/ealush/remix-validation" target="_blank" rel="noopener noreferrer">remix-validation(🌟 1)</a> 
+              </li><li>
                   <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 327)</a> 
               </li><li>
                   <a href="https://github.com/ealush/wait" target="_blank" rel="noopener noreferrer">wait(🌟 2)</a> 
