--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2 class="center">Code</h2>
             <ul class="center links">
             <li>
-                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 1886)</a> 
+                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 1892)</a> 
               </li><li>
                   <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 367)</a> 
               </li><li>
@@ -89,6 +89,10 @@
             <h2 class="center">Interviews</h2>
             <ul class="center links">
             <li>
+                  <a href="https://webrush.io/episodes/episode-188-wearing-a-vest-is-in-style-with-evyatar-alush" target="_blank" rel="noopener noreferrer">Wearing a Vest is in Style</a> <small>Web Rush Podcast</small>
+              </li><li>
+                  <a href="https://fedcast.co.il/%D7%9C%D7%9B%D7%9C_%D7%A9%D7%90%D7%9C%D7%94_%D7%AA%D7%A9%D7%95%D7%91%D7%94/1505/%D7%9C%D7%9B%D7%9C-%D7%A9%D7%90%D7%9C%D7%94-%D7%AA%D7%A9%D7%95%D7%91%D7%94-%D7%A2%D7%9D-%D7%90%D7%91%D7%99%D7%AA%D7%A8-%D7%90%D7%9C%D7%95%D7%A9/" target="_blank" rel="noopener noreferrer">Every Question Answered</a> <small>FED Cast IL (Hebrew)</small>
+              </li><li>
                   <a href="https://open.spotify.com/episode/2mrcevFlUKAxcUdQ4pyTYj" target="_blank" rel="noopener noreferrer">API Design IRL</a> <small>Open Source Podcast (Hebrew)</small>
               </li><li>
                   <a href="https://changelog.com/jsparty/213" target="_blank" rel="noopener noreferrer">Playing it close to the Vest</a> <small>JS Party</small>
