--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <h2 class="center">Code</h2>
             <ul class="center links">
             <li>
-                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 485)</a> 
+                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 486)</a> 
               </li><li>
-                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2034)</a> 
+                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2035)</a> 
               </li><li>
                   <a href="https://github.com/ealush/wait" target="_blank" rel="noopener noreferrer">wait(🌟 6)</a> 
               </li><li>
@@ -78,9 +78,9 @@
             <li>
                   <a href="https://www.youtube.com/watch?v=N7m-pwMQLD8&t" target="_blank" rel="noopener noreferrer">Form Validations Do Not Have To Suck. Introducing Vest!</a> <small>code.talks 2022</small>
               </li><li>
-                  <a href="https://www.youtube.com/watch?v=9gthzbVaHYo&t" target="_blank" rel="noopener noreferrer">Building an Assertion Library with Javascript Proxy</a> <small>Svelte Summit | Fall 2021</small>
+                  <a href="https://www.youtube.com/watch?v=9gthzbVaHYo&t" target="_blank" rel="noopener noreferrer">Building an Assertion Library with Javascript Proxy</a> <small>Fiverr Talks</small>
               </li><li>
-                  <a href="https://www.youtube.com/watch?v=X2PuiawaGV4" target="_blank" rel="noopener noreferrer">Up Your Form Validation Game with Vest</a> <small>Fiverr Talks</small>
+                  <a href="https://www.youtube.com/watch?v=X2PuiawaGV4" target="_blank" rel="noopener noreferrer">Up Your Form Validation Game with Vest</a> <small>Svelte Summit | Fall 2021</small>
               </li><li>
                   <a href="https://portal.gitnation.org/contents/vue-form-validations-with-vest" target="_blank" rel="noopener noreferrer">Vue Form Validations with Vest</a> <small>Vue.js London</small>
               </li><li>
