This is the last time we let htroyack commit ascii porn in the comments.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Code</h2>
             <ul>
             <li>
-                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 521)</a> 
+                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 524)</a> 
               </li><li>
                   <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2070)</a> 
               </li><li>
@@ -95,6 +95,8 @@
             <h2>Interviews</h2>
             <ul>
             <li>
+                  <a href="https://webrush.io/episodes/episode-216-javascript-proxies-with-evyatar-alush" target="_blank" rel="noopener noreferrer">Deep Dive into JavaScript Proxies</a> <small>Web Rush Podcast</small>
+              </li><li>
                   <a href="https://webrush.io/episodes/episode-188-wearing-a-vest-is-in-style-with-evyatar-alush" target="_blank" rel="noopener noreferrer">Wearing a Vest is in Style</a> <small>Web Rush Podcast</small>
               </li><li>
                   <a href="https://fedcast.co.il/%D7%9C%D7%9B%D7%9C_%D7%A9%D7%90%D7%9C%D7%94_%D7%AA%D7%A9%D7%95%D7%91%D7%94/1505/%D7%9C%D7%9B%D7%9C-%D7%A9%D7%90%D7%9C%D7%94-%D7%AA%D7%A9%D7%95%D7%91%D7%94-%D7%A2%D7%9D-%D7%90%D7%91%D7%99%D7%AA%D7%A8-%D7%90%D7%9C%D7%95%D7%A9/" target="_blank" rel="noopener noreferrer">Every Question Answered</a> <small>FED Cast IL (Hebrew)</small>
