Whatever will be, will be 8{

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <h2>Code</h2>
             <ul>
             <li>
-                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2137)</a> 
+                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2138)</a> 
               </li><li>
-                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 643)</a> 
+                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 645)</a> 
               </li><li>
                   <a href="https://github.com/ealush/butter-toast" target="_blank" rel="noopener noreferrer">butter-toast(🌟 112)</a> 
               </li><li>
@@ -110,7 +110,10 @@
                   <a href="https://anchor.fm/frontend-greatness/episodes/DX-is-UX-With-Evyatar-e12tco9" target="_blank" rel="noopener noreferrer">DX is UX</a> <small>Frontend Greatness Podcast</small>
               </li><li>
                   <a href="https://reactroundup.com/172" target="_blank" rel="noopener noreferrer">Form Validations and Open Source</a> <small>React Roundup Podcast</small>
-              </li></ul></div></section>
+              </li></ul></div><div>
+            <h2>Conferences</h2>
+            <ul>
+            <li>🇸🇬 iJS - Singapore | December 2023 </li><li>🇧🇪 FullStack Europe - Belgium | October 2023 </li><li>🇩🇪 code.talks - Germany | September 2023 </li><li>🇮🇱 ReactNext TLV - Israel | June 2023 </li><li>🇧🇪 DevDay Mons - Belgium | March 2023 </li><li>TestJS Summit | October 2022 </li><li>🇩🇪 iJS Munich - Germany | October 2022 </li><li>🇩🇪 code.talks - Germany | September 2022 </li><li>🇵🇱 ConfrontJS - Warsaw | March 2022 </li><li>JS Congress | November 2021 </li><li>Svelte Summit | Fall 2021 </li><li>Vue.JS London | October 2021 </li><li>Conf 42 Javascript | September 2021 </li></ul></div></section>
   </div>
 </body>
 
