--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </li></ul></div><div>
             <h2>Conferences</h2>
             <ul>
-            <li>🇸🇬 iJS - Singapore | December 2023 </li><li>🇧🇪 FullStack Europe - Belgium | October 2023 </li><li>🇩🇪 code.talks - Germany | September 2023 </li><li>🇮🇱 ReactNext TLV - Israel | June 2023 </li><li>🇧🇪 DevDay Mons - Belgium | March 2023 </li><li>TestJS Summit | October 2022 </li><li>🇩🇪 iJS Munich - Germany | October 2022 </li><li>🇩🇪 code.talks - Germany | September 2022 </li><li>🇵🇱 ConfrontJS - Warsaw | March 2022 </li><li>JS Congress | November 2021 </li><li>Svelte Summit | Fall 2021 </li><li>Vue.JS London | October 2021 </li><li>Conf 42 Javascript | September 2021 </li></ul></div></section>
+            <li><span class="no-link">🇸🇬 iJS - Singapore | December 2023</span> </li><li><span class="no-link">🇧🇪 FullStack Europe - Belgium | October 2023</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2023</span> </li><li><span class="no-link">🇮🇱 ReactNext TLV - Israel | June 2023</span> </li><li><span class="no-link">🇧🇪 DevDay Mons - Belgium | March 2023</span> </li><li><span class="no-link">TestJS Summit | October 2022</span> </li><li><span class="no-link">🇩🇪 iJS Munich - Germany | October 2022</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2022</span> </li><li><span class="no-link">🇵🇱 ConfrontJS - Warsaw | March 2022</span> </li><li><span class="no-link">JS Congress | November 2021</span> </li><li><span class="no-link">Svelte Summit | Fall 2021</span> </li><li><span class="no-link">Vue.JS London | October 2021</span> </li><li><span class="no-link">Conf 42 Javascript | September 2021</span> </li></ul></div></section>
   </div>
 </body>
 
