fix some fucking errors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="main" class="main">
       <div class="face"></div>
       <h1>HI<span class="paint">,</span> I AM<br>EVYATAR<span class="paint">.</span></h1>
-      <p>Front End Engineer at Meta.</p>
+      <p>Software Engineer at Meta.</p>
       <span>code<span class="paint">@</span>ealush.com</span>
     </section>
     <section class="links">
@@ -24,9 +24,9 @@
             <h2>Code</h2>
             <ul>
             <li>
-                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 700)</a> 
+                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 702)</a> 
               </li><li>
-                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2194)</a> 
+                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2195)</a> 
               </li><li>
                   <a href="https://github.com/ealush/wait" target="_blank" rel="noopener noreferrer">wait(🌟 11)</a> 
               </li><li>
