bara bra grejjor

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             <h2>Videos</h2>
             <ul>
             <li>
+                  <a href="https://topenddevs.com/podcasts/javascript-jabber/episodes/what-if-your-javascript-validations-looked-like-tests-jsj-597" target="_blank" rel="noopener noreferrer">What if your JavaScript Validations Looked like Tests?</a> <small>JavaScript Jabber</small>
+              </li><li>
                   <a href="https://www.youtube.com/watch?v=N7m-pwMQLD8&t" target="_blank" rel="noopener noreferrer">Form Validations Do Not Have To Suck. Introducing Vest!</a> <small>code.talks 2022</small>
               </li><li>
                   <a href="https://www.youtube.com/watch?v=9gthzbVaHYo&t" target="_blank" rel="noopener noreferrer">Building an Assertion Library with Javascript Proxy</a> <small>Fiverr Talks</small>
