--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <h2>Code</h2>
             <ul>
             <li>
-                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2209)</a> 
+                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 720)</a> 
               </li><li>
-                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 719)</a> 
+                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2209)</a> 
               </li><li>
                   <a href="https://github.com/ealush/wait" target="_blank" rel="noopener noreferrer">wait(🌟 11)</a> 
               </li><li>
@@ -115,7 +115,7 @@
               </li></ul></div><div>
             <h2>Conferences</h2>
             <ul>
-            <li><span class="no-link">🇸🇬 iJS - Singapore | December 2023</span> </li><li><span class="no-link">🇧🇪 FullStack Europe - Belgium | October 2023</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2023</span> </li><li><span class="no-link">🇮🇱 ReactNext TLV - Israel | June 2023</span> </li><li><span class="no-link">🇧🇪 DevDay Mons - Belgium | March 2023</span> </li><li><span class="no-link">TestJS Summit | October 2022</span> </li><li><span class="no-link">🇩🇪 iJS Munich - Germany | October 2022</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2022</span> </li><li><span class="no-link">🇵🇱 ConfrontJS - Warsaw | March 2022</span> </li><li><span class="no-link">JS Congress | November 2021</span> </li><li><span class="no-link">Svelte Summit | Fall 2021</span> </li><li><span class="no-link">Vue.JS London | October 2021</span> </li><li><span class="no-link">Conf 42 Javascript | September 2021</span> </li></ul></div></section>
+            <li><span class="no-link">🇸🇬 iJS - Singapore | December 2023</span> </li><li><span class="no-link">🇧🇪 FullStack Europe - Belgium | October 2023</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2023</span> </li><li><span class="no-link">🇮🇱 ReactNext TLV - Israel | June 2023</span> </li><li><span class="no-link">🇧🇪 DevDay Mons - Belgium | March 2023</span> </li><li><span class="no-link">🌐 TestJS Summit | October 2022</span> </li><li><span class="no-link">🇩🇪 iJS Munich - Germany | October 2022</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2022</span> </li><li><span class="no-link">🇵🇱 ConfrontJS - Warsaw | March 2022</span> </li><li><span class="no-link">🌐 JS Congress | November 2021</span> </li><li><span class="no-link">🌐 Svelte Summit | Fall 2021</span> </li><li><span class="no-link">🌐 Vue.JS London | October 2021</span> </li><li><span class="no-link">🌐 Conf 42 Javascript | September 2021</span> </li></ul></div></section>
   </div>
 </body>
 
