--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
             <h2>Interviews</h2>
             <ul>
             <li>
+                  <a href="https://www.compressed.fm/episode/161" target="_blank" rel="noopener noreferrer">Better Form Validation with Vest</a> <small>Compressed.FM</small>
+              </li><li>
+                  <a href="https://webrush.io/episodes/episode-261-whos-afraid-of-open-source" target="_blank" rel="noopener noreferrer">Who’s Afraid Of Open Source?</a> <small>Web Rush Podcast</small>
+              </li><li>
                   <a href="https://topenddevs.com/podcasts/javascript-jabber/episodes/what-if-your-javascript-validations-looked-like-tests-jsj-597" target="_blank" rel="noopener noreferrer">What if your JavaScript Validations Looked like Tests?</a> <small>JavaScript Jabber</small>
               </li><li>
                   <a href="https://webrush.io/episodes/episode-216-javascript-proxies-with-evyatar-alush" target="_blank" rel="noopener noreferrer">Deep Dive into JavaScript Proxies</a> <small>Web Rush Podcast</small>
