--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             <h2>Code</h2>
             <ul>
             <li>
-                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2444)</a> 
+                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 808)</a> 
               </li><li>
-                  <a href="https://github.com/ealush/emoji-picker-react" target="_blank" rel="noopener noreferrer">emoji-picker-react(🌟 805)</a> 
+                  <a href="https://github.com/ealush/vest" target="_blank" rel="noopener noreferrer">vest(🌟 2446)</a> 
+              </li><li>
+                  <a href="https://github.com/ealush/flairup" target="_blank" rel="noopener noreferrer">flairup(🌟 1)</a> 
               </li><li>
                   <a href="https://github.com/ealush/butter-toast" target="_blank" rel="noopener noreferrer">butter-toast(🌟 114)</a> 
               </li><li>
