--- a/index.html
+++ b/index.html
@@ -78,9 +78,13 @@
             <h2>Videos</h2>
             <ul>
             <li>
-                  <a href="https://www.youtube.com/watch?v=N7m-pwMQLD8&t" target="_blank" rel="noopener noreferrer">Form Validations Do Not Have To Suck. Introducing Vest!</a> <small>code.talks 2022</small>
+                  <a href="https://www.youtube.com/watch?v=s9nFLWzt4c0" target="_blank" rel="noopener noreferrer">Harness the power of JavaScript Proxies</a> <small>NodeTLV 2024</small>
               </li><li>
-                  <a href="https://www.youtube.com/watch?v=9gthzbVaHYo&t" target="_blank" rel="noopener noreferrer">Building an Assertion Library with Javascript Proxy</a> <small>Fiverr Talks</small>
+                  <a href="https://portal.gitnation.org/contents/css-only-search-improve-react-filtering-performance-with-css" target="_blank" rel="noopener noreferrer">CSS Only* Search: Improve React Filtering Performance with CSS!</a> <small>React Day Berlin 2023</small>
+              </li><li>
+                  <a href="https://www.youtube.com/watch?v=tt1ZuyoPcFc" target="_blank" rel="noopener noreferrer">Let's Build React Context in Vanilla JS</a> <small>ReactNext '23</small>
+              </li><li>
+                  <a href="https://www.youtube.com/watch?v=9gthzbVaHYo&t" target="_blank" rel="noopener noreferrer">Building an Assertion Library with Javascript Proxy</a> <small>Fiverr Talks 2022</small>
               </li><li>
                   <a href="https://www.youtube.com/watch?v=X2PuiawaGV4" target="_blank" rel="noopener noreferrer">Up Your Form Validation Game with Vest</a> <small>Svelte Summit | Fall 2021</small>
               </li><li>
@@ -121,7 +125,7 @@
               </li></ul></div><div>
             <h2>Conferences</h2>
             <ul>
-            <li><span class="no-link">🇸🇬 iJS - Singapore | December 2023</span> </li><li><span class="no-link">🇩🇪 ReactDay Berlin - Germany | December 2023</span> </li><li><span class="no-link">🇧🇪 FullStack Europe - Belgium | October 2023</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2023</span> </li><li><span class="no-link">🇮🇱 ReactNext TLV - Israel | June 2023</span> </li><li><span class="no-link">🇧🇪 DevDay Mons - Belgium | March 2023</span> </li><li><span class="no-link">🌐 TestJS Summit | October 2022</span> </li><li><span class="no-link">🇩🇪 iJS Munich - Germany | October 2022</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2022</span> </li><li><span class="no-link">🇵🇱 ConfrontJS - Warsaw | March 2022</span> </li><li><span class="no-link">🌐 JS Congress | November 2021</span> </li><li><span class="no-link">🌐 Svelte Summit | Fall 2021</span> </li><li><span class="no-link">🌐 Vue.JS London | October 2021</span> </li><li><span class="no-link">🌐 Conf 42 Javascript | September 2021</span> </li></ul></div></section>
+            <li><span class="no-link">🇧🇪 DevFest Mons - Belgium | November 2024</span> </li><li><span class="no-link">🇪🇸 React Alicante - Spain | September 2024</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2024</span> </li><li><span class="no-link">🇮🇱 Node TLV - Israel | June 2024</span> </li><li><span class="no-link">🇮🇱 ReactNext TLV - Israel | June 2024</span> </li><li><span class="no-link">🇸🇬 iJS - Singapore | December 2023</span> </li><li><span class="no-link">🇩🇪 ReactDay Berlin - Germany | December 2023</span> </li><li><span class="no-link">🇧🇪 FullStack Europe - Belgium | October 2023</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2023</span> </li><li><span class="no-link">🇮🇱 ReactNext TLV - Israel | June 2023</span> </li><li><span class="no-link">🇧🇪 DevDay Mons - Belgium | March 2023</span> </li><li><span class="no-link">🌐 TestJS Summit | October 2022</span> </li><li><span class="no-link">🇩🇪 iJS Munich - Germany | October 2022</span> </li><li><span class="no-link">🇩🇪 code.talks - Germany | September 2022</span> </li><li><span class="no-link">🇵🇱 ConfrontJS - Warsaw | March 2022</span> </li><li><span class="no-link">🌐 JS Congress | November 2021</span> </li><li><span class="no-link">🌐 Svelte Summit | Fall 2021</span> </li><li><span class="no-link">🌐 Vue.JS London | October 2021</span> </li><li><span class="no-link">🌐 Conf 42 Javascript | September 2021</span> </li></ul></div></section>
   </div>
 </body>
 
