This solves it.

--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
             <h2>Interviews</h2>
             <ul>
             <li>
+                  <a href="https://www.youtube.com/watch?v=AMOz9Kmsmys" target="_blank" rel="noopener noreferrer">Speaking Up: The Developer’s Guide to Conference Talks & Career Growth</a> <small>Javascript Jabber</small>
+              </li><li>
                   <a href="https://www.compressed.fm/episode/161" target="_blank" rel="noopener noreferrer">Better Form Validation with Vest</a> <small>Compressed.FM</small>
               </li><li>
                   <a href="https://webrush.io/episodes/episode-261-whos-afraid-of-open-source" target="_blank" rel="noopener noreferrer">Who’s Afraid Of Open Source?</a> <small>Web Rush Podcast</small>
